Add js functionallity to pizza sizes

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <div class="col-sm-3">
             <div class="line">
               <select class="form-control" id="pizzasizes">
-                <option value="small">Small</option>
-                <option value="medium">Medium</option>
-                <option value="large">Large</option>
+                <option value="1">Small</option>
+                <option value="2">Medium</option>
+                <option value="3">Large</option>
               </select>
             </div>
           </div>
